It would appear that GWT supports boxing/unboxing now.